# genai-bootcamp

week5/2-weather/: README.md  app.py  plan.py  pyproject.toml
week5/2-weather/weather/: stack.py
week5/2-weather/weather/backend/: infra.py
week5/2-weather/weather/backend/src/app/: main.py
week5/2-weather/weather/frontend/: infra.py
week5/2-weather/weather/frontend/src/: index.html
week6/3-document-extractor/document_extractor/backend/: infra.py
week6/3-document-extractor/document_extractor/backend/extractor/: main.py  requirements.txt
week6/3-document-extractor/document_extractor/backend/input_validator/: main.py  requirements.txt
week6/3-document-extractor/document_extractor/backend/output_validator/: main.py
week7/1-s3-vectors/new-s3-vectors-project/: .gitignore  pyproject.toml
week7/1-s3-vectors/new-s3-vectors-project/kb/kbs3/: pyproject.toml
week7/1-s3-vectors/new-s3-vectors-project/kb/s3vector/: pyproject.toml
week7/2-digital-twin-revisited/twin/backend/src/app/: main.py
week7/2-digital-twin-revisited/twin/frontend/src/: index.html
week8/1-admin-ui/: app.py
week8/1-admin-ui/twin/admin/: apifn.py  infra.py
week8/1-admin-ui/twin/admin/src/app/: main.py  questions.py  status_updater.py
week8/1-admin-ui/twin/backend/src/app/: main.py  questions.py  tools.py
week8/1-admin-ui/twin/frontend/: infra.py
week8/1-admin-ui/twin/frontend/admin/src/lib/: api.ts  types.ts
week8/1-admin-ui/twin/frontend/admin/src/routes/: +page.svelte
week8/1-admin-ui/twin/frontend/src/: index.html
